--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "vue-node-mall",
+  "name": "xmall",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "二次开发:Exrick 原:yucccc <13450003105@163.com>",
+  "author": "SQQ",
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
