--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "xmall",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "SQQ",
+  "author": "SQQ1",
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
