--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "xmall",
   "version": "1.0.0",
+  "homepage": "https://erwin0929.github.io/xmall/",
   "description": "A Vue.js project",
   "author": "SQQ1",
   "private": true,
@@ -8,7 +9,9 @@
     "dev": "node build/dev-server.js",
     "start": "node build/dev-server.js",
     "build": "node build/build.js",
-    "lint": "eslint --ext .js,.vue src"
+    "lint": "eslint --ext .js,.vue src",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "axios": "^0.16.2",
@@ -50,6 +53,7 @@
     "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.11.1",
     "friendly-errors-webpack-plugin": "^1.7.0",
+    "gh-pages": "^1.2.0",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
     "mockjs": "^1.0.1-beta3",
