--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "http-proxy-middleware": "^0.17.3",
     "mockjs": "^1.0.1-beta3",
     "node-sass": "^4.8.3",
+    "nprogress": "^0.2.0",
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "ora": "^1.4.0",
